--- a/assignment1.html
+++ b/assignment1.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
   Assignment #1 - REMEMBER TO FOLLOW THE STYLE GUIDE
 
   1. Fork your own version of this repo
@@ -24,5 +24,11 @@
       If you don't know how to make the above mentioned tags, either take a look around on
       the internet, or don't hesitate to ask me!
     -->
+    <h1>Rohan Patel</h1>
+    <ul>
+      <li>Learned some basics in CS 0334 and IS 0010</li>
+      <li>Made a simple web application at Steel Hacks last year</li>
+      <li>Made a simple web application (that may or may not have worked) at the Pitt Challenge hackathon this year</li>
+    </ul>
   </body>
 </html>
